shortener-deployment.yaml
apiVersion: apps/v2
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: shortener
  name: shortener
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: shortener
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/shorty-network: "true"
        io.kompose.service: "shortener"
    spec:
      containers:
        - env:
            - name: JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET
                  name: shortener-service--env
          image: tongwoo98/cloud-based-shortyurl_shortener:1.0.0
          name: shortener-service
          imagePullPolicy: Always  
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
