login-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: login
  name: login
spec:
  type: NodePort
  ports:
    - name: "8081"
      port: 8081 # exposed service port from container
      targetPort: 8081 #  actual port on which the application is running inside the container
      nodePort: 31000  # The port on the node where external traffic will come in on
  selector:
    io.kompose.service: login
status:
  loadBalancer: {}
