shortener-service.yaml
apiVersion: v1
kind: Service
#metadata:
#  annotations:
#    kompose.cmd: kompose convert
#    kompose.version: 1.26.0 (40646f47)
#  creationTimestamp: null
#  labels:
#    io.kompose.service: shortener
#  name: shortener
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      nodePort: 32000
#  selector:
#    io.kompose.service: shortener
status:
  loadBalancer: {}
